--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
   },
   "devDependencies": {
     "dotenv": "^16.0.3"
+  },
+  "keywords": [
+    "render",
+    "omdb_api",
+    "example"
+  ],
+  "engines": {
+    "node": "14.x"
   }
 }
